# server/swagger.yaml
@@ -75,3 +75,30 @@ paths:
           description: Citizen ID is not valid
         "409":
           description: Citizen id already exists
+
+  /user/login:
+    post:
+      tags:
+        - User
+      summary: Login user
+      operationId: loginUser
+      requestBody:
+        description: User object that needs to be added
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                phoneNumber:
+                  type: string
+                  description: User's phone number
+                password:
+                  type: string
+                  description: User's password
+      responses:
+        "200":
+          description: User logged in
+        "400":
+          description: User not found
+        "403":
+          description: Wrong Password
